--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -15,7 +16,9 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+*/
 
+/*
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -25,3 +28,4 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+*/
